# movie-recommendations

./: pyproject.toml
app/: main.py
app/api/: api.py  routers.py
app/api/controllers/: movie_scraper.py
app/domain/scraper/: abstract_scraper.py  schemas.py  urls.py
app/domain/scraper/controllers/: movie_scraper.py
app/domain/scraper/metacritic/: helpers.py  metacritic_scraper.py  selectors.py
app/scraper/: abstract_scraper.py  dependencies.py  metacritic_scraper.py  schemas.py
app/scraper/controllers/: movie_scraper.py
app/scraper/metacritic/: constants.py  helpers.py  metacritic_scraper.py  selectors.py  utils.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/scraper/: test_search_movie_scraping.py  test_search_movie_title.py
