[tool.poetry]
name = "movie-recommendations"
version = "0.1.0"
description = ""
authors = ["Kelv1nG <kelvinmaglipon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = {extras = ["standard"], version = "^2.8.2"}
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
black = "^24.4.2"
isort = "^5.13.2"
pydantic = "^2.7.1"
mypy = "^1.10.0"
playwright = {extras = ["all"], version = "^1.43.0"}
ipython = "^8.24.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
